--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
-  "name": "jodie",
+  "name": "Portfolio",
   "description": "Image-heavy photography portfolio with colorful accents & customizable pages. Includes adaptive image grids powered by CSS grid and automatic image integration into projects.",
   "version": "0.1.5",
-  "author": "LekoArts <hello@lekoarts.de>",
+  "author": "Ethan Aldrich <ethanaldrich9986@gmail.com>",
   "license": "0BSD",
   "starter-name": "gatsby-starter-portfolio-jodie",
   "scripts": {
